Moved video background from UK directory to common assets directory and added route to Belgian page

--- a/index.html
+++ b/index.html
@@ -318,8 +318,7 @@
 
 					<div class="col-sm-8 col-sm-offset-2">
 
-						<h4 class="font-alt mb-0">Program</h4>
-						<hr class="divider-w mt-10 mb-20">
+						<h2 class="module-title font-alt">Program</h2>
 
 						<div role="tabpanel">
 
@@ -557,7 +556,7 @@
 		<!-- Features end -->
 
 		<!-- Video start -->
-		<section class="module bg-dark-60" data-background="assets/images/section-6.jpg">
+		<section class="module bg-dark-60" data-background="assets/images/video_background.jpg">
 			<div class="container">
 
 				<div class="row">
