--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
 							<img src="assets/images/germany.jpg" alt="Logo of StartupBus Germany 2016">
 						</div>
 						<div class="work-caption font-alt">
-							<h3 class="btn btn-b btn-round">Lean more</h3>
+							<h3 class="btn btn-b btn-round">Learn more</h3>
 							<!-- <div class="work-descr">
 								More...
 							</div> -->
@@ -1144,7 +1144,7 @@
 					</div>
 
 					<div class="col-sm-4">
-						<div class="fb-page" data-href="https://www.facebook.com/startupbuseu/" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/StartupBusGER/"><a href="https://www.facebook.com/StartupBusGER/">StartupBus Germany</a></blockquote></div></div>
+						<div class="fb-page" data-href="https://www.facebook.com/startupbuseu/" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/startupbuseu/"><a href="https://www.facebook.com/startupbuseu/">StartupBus Europe</a></blockquote></div></div>
 					</div>
 				</div><!-- .row -->
 
